src/test/deca/context/invalid/minus.deca
{
int x = -"40";
}
// @expected_output deca:2:9: Invalid type for operand: String instead of int or float
